@@ -1,19 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST sphinxcontrib-httpdomain-1.1.2.tar.gz 6873 RMD160 e5ba9d2cdbbedf663241db14c4355c8602cca387 SHA1 56e1e42c887ed5d80c2a9b1e4b043dd19db0c288 SHA256 97ad05755192afe236dfbfc626d6363033d3d3a756364d77d08c2bf7a69dfcc2
 DIST sphinxcontrib-httpdomain-1.1.4.tar.gz 6899 RMD160 d224d90286cf7dddec7a6c3ee87a4e3c7a8150e8 SHA1 ceeb8e81b59303d47b3dc40c73acd1618686c3c9 SHA256 5950c776696bd5c14efa953441a3c96472119640c918b6ec4e934f4de0ee7d67
 DIST sphinxcontrib-httpdomain-1.1.5.tar.gz 6957 RMD160 6f43aaf2e20067b16957602013e20e5ef6a9b989 SHA1 afc13b52cfd8be22100fc2fdcb2e8404e5ae6f06 SHA256 861c011a2e308e4431a689927d50befe63636e32f472884a43c595c8ed87a94c
-EBUILD sphinxcontrib-httpdomain-1.1.2.ebuild 639 RMD160 b3a993f3463c4861dd15d22aedd3fe704dec1105 SHA1 6230151ab08b12f34fffd44eb35ba4e10b4c5384 SHA256 d008efa91145cf6fe8235436ae86a67a7e13c662634440469dae7b3d2b35ed21
-EBUILD sphinxcontrib-httpdomain-1.1.4.ebuild 640 RMD160 edcccacbe473317fd8e7414bd1c4fa7b8bc25102 SHA1 385379488617702cfef47e3fc58916a590b15c27 SHA256 1bf77a39a1cb5b6a8b9b7d7cb08b6db98b783c14a44df274d0eddfc5e0d4b0c6
+EBUILD sphinxcontrib-httpdomain-1.1.4.ebuild 639 RMD160 b3a993f3463c4861dd15d22aedd3fe704dec1105 SHA1 6230151ab08b12f34fffd44eb35ba4e10b4c5384 SHA256 d008efa91145cf6fe8235436ae86a67a7e13c662634440469dae7b3d2b35ed21
 EBUILD sphinxcontrib-httpdomain-1.1.5.ebuild 641 RMD160 8aa7f94b2a3893be90126e619f0d8032fe81ed7a SHA1 cef49237cbbc1208682c3d4175122771576cf014 SHA256 758a12d90cfc047677f44b21551053094084b08c6806e826a16f4e20a4cd4d23
-MISC ChangeLog 1567 RMD160 da6078fa8a2dda9ecaf7e49d0e9e4796a3967be2 SHA1 4d70fe7c1b147a6f53332fb35ff3b1e590a37b79 SHA256 6277f5e570bb11873256446f021b0ed9198c0743339c67e2cd04c2844e8efef6
+MISC ChangeLog 1713 RMD160 5f85e31085bd3c3edcacf2d57580c3a9dcd74f58 SHA1 1ec534dc53578ba06bdf82af18c86eac9ab00ca3 SHA256 cdb5fa0674bc8cd601bfe0b49278411908e3a3c07fd3361d9cec6e378ff5b17a
 MISC metadata.xml 702 RMD160 e0ab3bac531018b4b5cfb5d7d0da023a2224dfac SHA1 21135cb889825381cde64104e42af1394cc1defa SHA256 22b33253e42971dd67a36bc49e4ab2025d543a27d72400150c1f1b8cf7543d6c
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk4sMdgACgkQzJrj3cAXR0nk9ACgi2XlEhDx0TzGULCqSrT3J8Ux
-16IAoJLPfd1K34W+Jqb44FPG6sY+jgAW
-=6wV+
+iEYEAREKAAYFAk4sTAYACgkQzJrj3cAXR0n3SACfdL1jag5CDNBo8bvS5WA/W9L6
+teQAniktdC94I4k3OK6WaHOX6IF47rxS
+=eeTQ
 -----END PGP SIGNATURE-----
